[package]
name = "opencv-test"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
opencv = "0.92.0"
rocket = "0.5.1"
tokio-util = "0.7.12"
pretty_env_logger = "0.5"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
form_urlencoded = "1"
http = "1"
futures-util = { version = "0.3", default-features = false }
hyper-util = "0.1.6"
futures-core = "0.3.31"
tokio-stream = "0.1.16"
futures = "0.3.31"
